examples/kyverno/policy-reporter-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: policy-reporter
  namespace: policy-reporter
  annotations:
    ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  ingressClassName: haproxy
  rules:
    - host: policy-reporter-127-0-0-1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: policy-reporter-ui
                port:
                  number: 8080
